<?xml version="1.0"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:showDividers="beginning|middle|end"
    android:id="@+id/spotappsid"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/secondary_amber">

    <!-- tools:context=".MainActivity" android:weightSum="1" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" -->

    <TextView android:id="@+id/spotTitleTextView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/spotapps_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@color/secondary_amber"/>

    <!-- layout_weight will give all space not in all other elements, if you give 1 and 2 - they split 1/3 and 2/3 -->


    <!-- <Spinner android:layout_width="wrap_content" android:layout_h-eight="wrap_content" android:id="@+id/spinner" android:spinnerMode="dialog" /> <ListView android:layout_width="wrap_content" android:layout_height="228dp" android:id="@+id/listView" android:smoothScrollbar="true" android:nestedScrollingEnabled="true" /> -->

    <!-- this listview contains the mini apps relevant to the location -->
    <ListView
        android:id="@+id/miniAppRatedListView"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:background="@color/primary_amber"
        android:smoothScrollbar="true" />
        android:dividerHeight="8px"/>

    <Button android:id="@+id/btn_create_new_mini_app" android:layout_height="wrap_content" android:layout_width="fill_parent"
        android:text="@string/btn_create_new_mini_app" android:onClick="createNewMiniApp" style="?android:attr/buttonStyleSmall" android:background="@drawable/buttonshape" />

    <Button android:id="@+id/btn_not_on_spot" android:layout_height="wrap_content" android:layout_width="fill_parent"
        android:text="@string/btn_not_on_spot" android:onClick="viewNearbySpots" style="?android:attr/buttonStyleSmall" android:background="@drawable/buttonshape"/>

</LinearLayout>