    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:showDividers="beginning|middle|end"
        android:id="@+id/spotappsid"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/secondary_amber"
        tools:context="com.spotapps.ViewNearbySpotsActivity">

    <TextView android:id="@+id/notAtTitleTextView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/nearby_spots" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_margin="5dp"/>

    <!-- layout_weight will give all space not in all other elements, if you give 1 and 2 - they split 1/3 and 2/3 -->


    <!-- <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/spinner" android:spinnerMode="dialog" /> <ListView android:layout_width="wrap_content" android:layout_height="228dp" android:id="@+id/listView" android:smoothScrollbar="true" android:nestedScrollingEnabled="true" /> -->

    <ListView
        android:id="@+id/nearbySpotListView"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:background="@color/primary_amber" android:layout_margin="5dp" />

    <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/spotTitleTextView"
                android:layout_weight="3"
                android:layout_height="wrap_content" android:text="Hotel 4 Seasons Bet Dagan" android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="0dp" />

            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btn_refresh"
                android:onClick="viewNearbySpots"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="8dp" />

        </LinearLayout>
        -->
        <TextView android:id="@+id/createNewSpotTextView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/no_nearby_spots_create" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_margin="5dp"/>

        <TextView android:id="@+id/NameLabelTextView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Name:" android:textAppearance="?android:attr/textAppearanceLarge"  android:background="@color/primary_amber" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
        <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/editName" android:hint="Enter the name of the Spot" android:singleLine="true" android:inputType="textCapWords"  android:background="@color/primary_amber" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>

        <TextView android:id="@+id/TypeLabelTextView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Type:" android:textAppearance="?android:attr/textAppearanceLarge"  android:background="@color/primary_amber" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
        <EditText android:layout_width="fill_parent" android:layout_height="50dp" android:id="@+id/editType" android:hint="Choose the type of the Spot" android:singleLine="true" android:inputType="textCapWords"  android:background="@color/primary_amber" android:layout_marginLeft="5dp" android:layout_marginRight="5dp"/>
    <Button android:id="@+id/btn_save_new_spot" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/btn_save_new_spot" android:onClick="createNewSpot" style="?android:attr/buttonStyleSmall"  android:background="@drawable/buttonshape" android:layout_margin="5dp"/>

</LinearLayout>
